Started making it easy to import slag as a library through cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ endif()
 if(SLAG_DX12_BACKEND)
     add_subdirectory(third-party/dx12-headers)
     add_subdirectory(third-party/d3dma)
-    target_include_directories(Slag SYSTEM BEFORE PUBLIC DirectX-Headers)
+    target_include_directories(Slag SYSTEM BEFORE PRIVATE DirectX-Headers)
     target_link_libraries(Slag DirectX-Headers D3D12MemoryAllocator)
     add_custom_command(TARGET Slag COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/third-party/D3D12 ${CMAKE_BINARY_DIR}/D3D12)
 endif()
@@ -271,4 +271,12 @@ if(BUILD_SLAG_TESTS)
 
 endif()
 
-target_include_directories(Slag PUBLIC src)
+target_include_directories(Slag
+        PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+        PUBLIC
+        # where top-level project will look for the library's public headers
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
+        # where external projects will look for the library's public headers
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+
