Made platform data a bit more explicit, using native types instead of void pointers if the backend is supported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,32 @@ include(GNUInstallDirs)
 
 set(CMAKE_CXX_STANDARD 20)
 
-OPTION(SLAG_VULKAN_BACKEND "Include Vulkan backend" ON)
-OPTION(SLAG_DX12_BACKEND "Include DX12 backend" ON)
+OPTION(SLAG_VULKAN_BACKEND "Include Vulkan Renderer backend" ON)
+OPTION(SLAG_DX12_BACKEND "Include DX12 Renderer backend" ON)
+
+OPTION(SLAG_WINDOWS_BACKEND "Use Microsoft Windows Windowing Backend" ON)
+OPTION(SLAG_X11_BACKEND "Use X11 Windowing Backend" ON)
+OPTION(SLAG_WAYLAND_BACKEND "Use Wayland Windowing Backend" ON)
+if(WIN32)
+    set(SLAG_X11_BACKEND OFF)
+    set(SLAG_WAYLAND_BACKEND OFF)
+endif()
 if(NOT WIN32)
     set(SLAG_DX12_BACKEND OFF)
+    set(SLAG_WINDOWS_BACKEND OFF)
+endif()
+#enable backend macros
+if(SLAG_WINDOWS_BACKEND)
+    add_definitions(-DSLAG_WINDOWS_BACKEND=1)
+    message("added windows backend")
+endif()
+if(SLAG_X11_BACKEND)
+    add_definitions(-DSLAG_X11_BACKEND=1)
+    message("added x11 backend")
+endif()
+if(SLAG_WAYLAND_BACKEND)
+    add_definitions(-DSLAG_WAYLAND_BACKEND=1)
+    message("added wayland backend")
 endif()
 
 find_package(Boost REQUIRED)
