Changed platform data "Windows" to win32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 20)
 OPTION(SLAG_VULKAN_BACKEND "Include Vulkan Renderer backend" ON)
 OPTION(SLAG_DX12_BACKEND "Include DX12 Renderer backend" ON)
 
-OPTION(SLAG_WINDOWS_BACKEND "Use Microsoft Windows Windowing Backend" ON)
+OPTION(SLAG_WINDOWS_BACKEND "Use Win32 Windowing Backend" ON)
 OPTION(SLAG_X11_BACKEND "Use X11 Windowing Backend" ON)
 OPTION(SLAG_WAYLAND_BACKEND "Use Wayland Windowing Backend" ON)
 if(WIN32)
@@ -20,9 +20,9 @@ if(NOT WIN32)
     set(SLAG_WINDOWS_BACKEND OFF)
 endif()
 #enable backend macros
-if(SLAG_WINDOWS_BACKEND)
-    add_definitions(-DSLAG_WINDOWS_BACKEND=1)
-    message("added windows backend")
+if(SLAG_WIN32_BACKEND)
+    add_definitions(-DSLAG_WIN32_BACKEND=1)
+    message("added win32 backend")
 endif()
 if(SLAG_X11_BACKEND)
     add_definitions(-DSLAG_X11_BACKEND=1)
