--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,18 @@ set(CMAKE_CXX_STANDARD 20)
 OPTION(SLAG_VULKAN_BACKEND "Include Vulkan Renderer backend" ON)
 OPTION(SLAG_DX12_BACKEND "Include DX12 Renderer backend" ON)
 
-OPTION(SLAG_WINDOWS_BACKEND "Use Win32 Windowing Backend" ON)
+OPTION(SLAG_WIN32_BACKEND "Use Win32 Windowing Backend" ON)
 OPTION(SLAG_X11_BACKEND "Use X11 Windowing Backend" ON)
 OPTION(SLAG_WAYLAND_BACKEND "Use Wayland Windowing Backend" ON)
 if(WIN32)
     set(SLAG_X11_BACKEND OFF)
     set(SLAG_WAYLAND_BACKEND OFF)
+    message("turned off x11 and wayland backends")
 endif()
 if(NOT WIN32)
     set(SLAG_DX12_BACKEND OFF)
-    set(SLAG_WINDOWS_BACKEND OFF)
+    set(SLAG_WIN32_BACKEND OFF)
+    message("turned off dx12 and win32 backends")
 endif()
 #enable backend macros
 if(SLAG_WIN32_BACKEND)
