More tests, most passing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,6 +246,9 @@ if(PROJECT_IS_TOP_LEVEL)
             tests/third-party/LodePNG/lodepng.h
             tests/tests/SwapChain.cpp
             tests/tests/Buffer.cpp
+            tests/tests/Texture.cpp
+            tests/tests/DescriptorPool.cpp
+            tests/tests/DescriptorBundle.cpp
     )
 
     target_link_libraries(SlagTests GTest::gtest SDL2::SDL2 glm::glm Slag)
